--- a/index.html
+++ b/index.html
@@ -59,49 +59,36 @@
         </section>
         <section>
             <h2>Чим ми займаємося</h2>
-            <img src="./images/box1.jpg" alt="1example" width="370">
-            <img src="./images/box2.jpg" alt="2example" width="370">
-            <img src="./images/box3.jpg" alt="3example" width="370">
+            <ul>
+            <li><img src="./images/box1.jpg" alt="1приклад" width="370"></li>
+            <li><img src="./images/box2.jpg" alt="2приклад" width="370"></li>
+            <li><img src="./images/box3.jpg" alt="3приклад" width="370"></li>
+            </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="./images/Ihor.jpg" alt="Ihor Photo" width="270">
-                        <figcaption>
+                   
+                        <img src="./images/ihor.jpg" alt="ігор-фото" width="270">
                             <h3>Ігор Дем'яненко</h3>
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                            <p>Product Designer</p>                 
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/Olya.jpg" alt="Olya Photo" width="270">
-                        <figcaption>
+
+                        <img src="./images/olya.jpg" alt="ольга-фото" width="270">
                             <h3>Ольга Рєпіна</h3>
                             <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/Mykola.jpg" alt="Mykola Photo" width="270">
-                        <figcaption>
+                        <img src="./images/mykola.jpg" alt="микола-фото" width="270">
                             <h3>Микола Тарасов</h3>
                             <p>Marketing</p>
-
-                        </figcaption>
-                    </figure>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/Misha.jpg" alt="Misha Photo" width="270">
-                        <figcaption>
+                        <img src="./images/misha.jpg" alt="міша-фото" width="270">
                             <h3>Михайло Єрмаков</h3>
                             <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
                 </li>
             </ul>
         </section>
