--- a/index.html
+++ b/index.html
@@ -5,106 +5,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">   
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html"><span>Web</span>Studio </a>
-            <ul>
+            <a class="header-logo link "
+             href="./index.html">
+            <span class="logo-web header-logo">Web</span>Studio 
+            </a>
+            <ul class="list">
                 <li>
-                    <a href="">Студія</a>
+                    <a class="header-link link "
+                     href="">Студія
+                </a>
                 </li>
                 <li>
-                    <a href="">Портфоліо</a>
+                    <a class="header-link link "
+                     href="portfolio.html" 
+                    >Портфоліо
+                </a>
                 </li>
                 <li>
-                    <a href="">Контакти</a>
+                    <a class="header-link link "
+                     href=""
+                    >Контакти
+                </a>
                 </li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts link list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contact-mail link"
+                href="mailto:info@devstudio.com" 
+                >info@devstudio.com</a>
+
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a
+                 class="contact-number link "
+                  href="tel:+380961111111"
+                >+38 096 111 11 11
+                </a>
             </li>
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="upper-section">
+            <h1 class="main-text">Ефективні рішення для вашого бізнесу</h1>
+            <button class="upper-section-button button" type="button">Замовити послугу</button>
         </section>
-        <section>
-            <h2 hidden>Наші переваги</h2>
-            <ul>
+        <section class="about">
+            <h2  hidden>Наші переваги</h2>
+            <ul class="about-list list">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="about-item-upper">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="about-item-lower">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="about-item-upper">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="about-item-lower">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="about-item-upper">ПЛАНУВАННЯ</h3>
+                    <p class="about-item-lower">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="about-item-upper">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="about-item-lower">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
-            <ul>
+        <section class="about-work">
+            <h2 class=about-work-header>Чим ми займаємося</h2>
+            <ul class="list">
             <li><img src="./images/box1.jpg" alt="1приклад" width="370"></li>
             <li><img src="./images/box2.jpg" alt="2приклад" width="370"></li>
             <li><img src="./images/box3.jpg" alt="3приклад" width="370"></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="about-team">
+            <h2 class="about-team-header">Наша команда</h2>
+            <ul class="list">
                 <li>
                    
                         <img src="./images/ihor.jpg" alt="ігор-фото" width="270">
-                            <h3>Ігор Дем'яненко</h3>
-                            <p>Product Designer</p>                 
+                            <h3 class="team-name">Ігор Дем'яненко</h3>
+                            <p class="team-position">Product Designer</p>                 
                 </li>
                 <li>
 
                         <img src="./images/olya.jpg" alt="ольга-фото" width="270">
-                            <h3>Ольга Рєпіна</h3>
-                            <p>Frontend Developer</p>
+                            <h3 class="team-name">Ольга Рєпіна</h3>
+                            <p class="team-position">Frontend Developer</p>
                 </li>
                 <li>
                         <img src="./images/mykola.jpg" alt="микола-фото" width="270">
-                            <h3>Микола Тарасов</h3>
-                            <p>Marketing</p>
+                            <h3 class="team-name">Микола Тарасов</h3>
+                            <p class="team-position">Marketing</p>
                 </li>
                 <li>
                         <img src="./images/misha.jpg" alt="міша-фото" width="270">
-                            <h3>Михайло Єрмаков</h3>
-                            <p>UI Designer</p>
+                            <h3 class="team-name">Михайло Єрмаков</h3>
+                            <p class="team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio </a>
+    <footer class="footer">
+        <a class="link footer-logo" href="./index.html"><span class=logo-web>Web</span>Studio </a>
         <address>
-            <a href="https://goo.gl/maps/J9HDBwfUYiUZzfEh8" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
+            <a class="link adress " href="https://goo.gl/maps/J9HDBwfUYiUZzfEh8" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
                 пр-т Лесі Українки, 26</a>
 
-            <ul>
+            <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="link footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="link footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
